feat: associate CookieTypes with Websites